WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150814
hasOverflowClip() does not necessarily mean valid layer().
https://bugs.webkit.org/show_bug.cgi?id=150814
Summary
hasOverflowClip() does not necessarily mean valid layer().
alan
Reported
2015-11-02 13:30:45 PST
Since requiresLayer() can be overwritten, any renderer subclass can just simply return false even when overflow clip is present.
Attachments
Patch
(8.55 KB, patch)
2015-11-02 13:38 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-11-02 13:38:55 PST
Created
attachment 264621
[details]
Patch
WebKit Commit Bot
Comment 2
2015-11-02 15:17:43 PST
Comment on
attachment 264621
[details]
Patch Clearing flags on attachment: 264621 Committed
r191915
: <
http://trac.webkit.org/changeset/191915
>
WebKit Commit Bot
Comment 3
2015-11-02 15:17:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug